# ariadne

./: Cargo.toml  README.md  flake.nix  maze.json
src/: main.rs
src/commands/: clear.rs  create.rs  mod.rs  quit.rs  solve.rs
src/lib/: cell.rs  coordinate.rs  direction.rs  maze.rs  mod.rs  prelude.rs
