[package]
name = "ariadne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0"
crossterm = "0.23"
clap = { version = "3.1.18", features = [ "derive" ] }
colored = "2"
